--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_svg: ^2.0.7
+  carousel_slider: ^4.2.1
   intl: ^0.19.0
 
 dev_dependencies:
