--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
   intl: ^0.19.0
+  flutter_bloc: ^8.1.6
+  dio: ^5.4.3+1
+  shared_preferences: ^2.2.3
+  image_picker: ^1.0.8
+  image_cropper: ^4.0.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
