--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^1.0.8
   image_cropper: ^4.0.1
   equatable: ^2.0.5
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
